return page count as well
