# api/swagger.yaml
@@ -36,18 +36,7 @@ paths:
             default: 1
       responses:
         200:
-          description: Successfully retrieved the posts
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  posts:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/Post'
-                  pages:
-                    type: integer
+          $ref: '#/components/responses/Posts'
   /posts/{PostID}:
     parameters:
       - $ref: '#/components/parameters/PostID'
@@ -140,18 +129,7 @@ paths:
             default: 1
       responses:
         200:
-          description: Successfully retrieved users
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  users:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/User'
-                  pages:
-                    type: integer
+          $ref: '#/components/responses/Users'
   /users/{UserID}:
     parameters:
       - $ref: '#/components/parameters/UserID'
@@ -396,6 +374,33 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/UpdatedPost'
+  responses:
+    Posts:
+      description: Paginated post query response object.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              posts:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PostMetadata'
+              pages:
+                type: integer
+    Users:
+      description: Paginated user query response object.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              users:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+              pages:
+                type: integer
   securitySchemes:
     X-Auth-Token:
       type: apiKey
